fix: fix labels on dark mode

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -5,3 +5,7 @@ html, body, #root {
 
     height: 100vh;
 }
+
+svg.recharts-surface {
+    padding: 5px;
+}
